refactor: create header and hero section

--- a/styles/global.css
+++ b/styles/global.css
@@ -45,7 +45,7 @@
   --fst-italic: italic;
   --fw-bold: bold;
 
-  --fs-3xl: 2.75rem;
+  --fs-3xl: 2.5rem;
   --fs-2xl: 2.25rem;
   --fs-xl: 1.85rem;
   --fs-lg: 1.65rem;
@@ -55,7 +55,7 @@
   --fs-xs: 0.875rem;
 
   --lh-base: 1.5;
-  --lh-title: 1.2;
+  --lh-lg: 1.2;
 }
 
 * {
@@ -81,12 +81,18 @@ body {
   color: var(--neutral-100);
 }
 
+main {
+  display: flex;
+  flex-direction: column;
+  gap: var(--gap-section);
+}
+
 h1,
 h2,
 h3 {
   color: var(--brand-primary-100);
   font-weight: var(--fw-bold);
-  line-height: var(--lh-title);
+  line-height: var(--lh-lg);
 }
 
 h1 {
@@ -101,28 +107,16 @@ h3 {
   font-size: var(--fs-xl);
 }
 
-.wrapper {
-  display: flex;
-  flex-direction: column;
-  gap: var(--gap-section);
-  margin-block: var(--py-base);
-}
-
-.container {
-  margin-inline: auto;
-  width: min(var(--max-width), 100% - var(--px-base) * 2);
-}
-
 @media (width >= 80em) {
   :root {
-    --fs-3xl: 4rem;
-    --fs-2xl: 3rem;
-    --fs-xl: 2.5rem;
-    --fs-lg: 2rem;
-    --fs-md: 1.75rem;
-    --fs-base: 1.5rem;
-    --fs-sm: 1.25rem;
-    --fs-xs: 1.125rem;
+    --fs-3xl: 3.5rem;
+    --fs-2xl: 2.5rem;
+    --fs-xl: 2rem;
+    --fs-lg: 1.75rem;
+    --fs-md: 1.5rem;
+    --fs-base: 1.25rem;
+    --fs-sm: 1.125rem;
+    --fs-xs: 1rem;
 
     --max-width: 76rem;
     --px-base: 7rem;
