--- a/styles/index.css
+++ b/styles/index.css
@@ -1,1 +1,5 @@
 @import url("global.css");
+@import url("buttons.css");
+@import url("utility.css");
+@import url("header.css");
+@import url("hero.css");
