--- a/styles/hero.css
+++ b/styles/hero.css
@@ -1,57 +1,83 @@
-.hero {
+#hero {
   align-items: center;
   display: flex;
   flex-direction: column;
-  gap: 2rem;
-  margin-top: 4rem;
+  height: calc(100vh - 2 * var(--py-base));
+  justify-content: space-between;
   text-align: center;
-}
 
-.hero > div {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-}
+  & nav {
+    width: 100%;
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
 
-.hero > div > span {
-  font-size: var(--fs-xs);
-  letter-spacing: 0.2rem;
-  color: var(--brand-primary-100);
-}
+    & svg {
+      width: 2rem;
+    }
 
-.hero > div > h1 span {
-  color: var(--brand-primary-500);
-}
+    & div {
+      display: flex;
+      flex-direction: row;
+      gap: 2rem;
+    }
+  }
 
-.hero > div p {
-  font-size: var(--fs-base);
-}
+  & div {
+    display: flex;
+    flex-direction: column;
+    gap: 1.25rem;
 
-.arrow {
-  position: relative;
-  display: block;
+    & > span {
+      font-size: var(--fs-xs);
+      letter-spacing: 0.2rem;
+      color: var(--brand-primary-100);
+    }
+
+    & h1 span {
+      color: var(--brand-primary-500);
+    }
+
+    & p {
+      font-size: var(--fs-sm);
+    }
+  }
 }
 
 @keyframes bounce {
   0% {
-    margin-top: 0rem;
+    bottom: 0;
   }
   33% {
-    margin-top: 1rem;
+    bottom: 1rem;
   }
   100% {
-    margin-top: 0rem;
+    bottom: 0;
   }
 }
 
-.arrow > div {
-  position: absolute;
-  animation: bounce 1.2s ease-in-out infinite;
+.arrow {
+  margin-top: 3.5rem;
+  position: relative;
+
+  & div {
+    position: absolute;
+    bottom: 0;
+    animation: bounce 1.2s ease-in-out infinite;
+  }
 }
 
 @media (width >= 80em) {
-  .hero {
-    gap: 3.5rem;
-    margin-top: 6rem;
+  #hero {
+    & nav {
+      & svg {
+        width: 3rem;
+      }
+    }
+    & div {
+      & p {
+        font-size: var(--fs-base);
+      }
+    }
   }
 }
