refactor: add cases section

--- a/styles/global.css
+++ b/styles/global.css
@@ -78,11 +78,12 @@ html {
 
 body {
   background: radial-gradient(
-      circle at center top,
-      var(--brand-secondary-100) -20%,
-      var(--brand-secondary-700) 40%
+      circle at top,
+      hsla(203, 79%, 22%, 0.4) -20%,
+      hsla(201, 100%, 4%, 1) 30%
     )
     var(--brand-secondary-700) no-repeat top;
+
   color: var(--neutral-100);
 }
 
@@ -121,7 +122,7 @@ h3 {
     --fs-md: 1.5rem;
     --fs-base: 1.25rem;
     --fs-sm: 1.125rem;
-    --fs-xs: 1rem;
+    --fs-xs: 0.875rem;
 
     --max-width: 76rem;
     --px-base: 7rem;
