--- a/styles/cases.css
+++ b/styles/cases.css
@@ -16,7 +16,7 @@
     display: grid;
     gap: 2rem;
     justify-items: center;
-    padding: 2rem;
+    padding: 1.5rem 1.5rem 2.5rem 1.5rem;
 
     & img {
       width: 100%;
@@ -35,7 +35,7 @@
       }
 
       & h3 {
-        padding-block: 1.5rem;
+        padding-block: 2.5rem;
       }
 
       & > div {
@@ -65,6 +65,10 @@
       padding: 4rem;
 
       & > div {
+        & h3 {
+          padding-block: 1.5rem;
+        }
+
         & .btn {
           width: fit-content;
         }
