refactor: add lottiefiles and trigger animations

--- a/styles/cases.css
+++ b/styles/cases.css
@@ -53,6 +53,8 @@
 
 @media (width >= 64em) {
   #cases {
+    gap: 4rem;
+
     & article {
       background: radial-gradient(
           circle at left,
