--- a/styles/cases.css
+++ b/styles/cases.css
@@ -18,9 +18,8 @@
     justify-items: center;
     padding: 1.5rem 1.5rem 2.5rem 1.5rem;
 
-    & img {
-      width: 100%;
-      max-width: 20rem;
+    & dotlottie-player {
+      width: 20rem;
     }
 
     & > div {
