--- a/styles/utility.css
+++ b/styles/utility.css
@@ -1,27 +1,18 @@
-.container {
-  margin-inline: auto;
-  width: min(var(--max-width), 100% - var(--px-base) * 2);
-}
-
 .mobile-only {
-  display: flex;
+  display: grid;
 }
 
 .desktop-only {
   display: none !important;
 }
 
-.wrapper {
-  margin-block: var(--py-base);
-}
-
-span.highlight {
+.highlight {
   color: var(--brand-primary-100);
 }
 
-@media (width >= 80em) {
+@media (width >= 76em) {
   .desktop-only {
-    display: flex !important;
+    display: grid !important;
   }
 
   .mobile-only {
