--- a/styles/index.css
+++ b/styles/index.css
@@ -3,3 +3,5 @@
 @import url("utility.css");
 @import url("hero.css");
 @import url("cases.css");
+@import url("about.css");
+@import url("footer.css");
