--- a/styles/about.css
+++ b/styles/about.css
@@ -7,6 +7,7 @@
     gap: 3rem;
 
     & img {
+      justify-self: center;
       max-width: var(--max-img);
     }
 
@@ -20,6 +21,10 @@
   }
 
   & article:nth-of-type(1) {
+    & h2 {
+      text-align: center;
+    }
+
     & > div {
       gap: 2rem;
 
@@ -29,10 +34,12 @@
         gap: 1.5rem;
 
         & span {
+          align-items: center;
           border: 2px solid var(--brand-secondary-500);
           border-radius: 1rem;
+          display: grid;
+          grid-template-columns: 1fr auto;
           padding: 1.125rem;
-          text-align: center;
 
           & > p:nth-of-type(2) {
             font: var(--fw-base) var(--fs-md) / var(--lh-base) var(--ff);
@@ -52,19 +59,54 @@
 
       & > div {
         display: grid;
-        gap: 0.25rem;
+        gap: 3rem;
 
-        & > span {
-          font-size: var(--fs-xs);
-        }
-
-        & > p {
+        & > div {
           display: grid;
           gap: 0.25rem;
 
-          & > span:nth-of-type(1) {
-            font: var(--fw-base) var(--fs-md) / var(--lh-base) var(--ff);
+          & > span {
+            font-size: var(--fs-xs);
           }
+
+          & > p {
+            display: grid;
+            gap: 0.25rem;
+
+            & > span:nth-of-type(1) {
+              font: var(--fw-base) var(--fs-base) / var(--lh-base) var(--ff);
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (width >= 48em) {
+  #about {
+    & article:nth-of-type(1) {
+      & > div {
+        & > div:nth-of-type(1) {
+          grid-template-columns: repeat(3, 1fr);
+
+          & span {
+            grid-template-columns: 1fr;
+            text-align: center;
+          }
+        }
+      }
+      & > div {
+        & > div:nth-of-type(2) {
+          grid-template-columns: repeat(2, 1fr);
+        }
+      }
+    }
+
+    & article:nth-of-type(2) {
+      & > div:last-child {
+        & > div {
+          grid-template-columns: repeat(3, 1fr);
         }
       }
     }
@@ -74,24 +116,13 @@
 @media (width >= 64em) {
   #about {
     & article:nth-of-type(1) {
-      & > div {
-        & > div:nth-of-type(1) {
-          grid-template-columns: repeat(3, 1fr);
-        }
-
-        & > div:nth-of-type(2) {
-          grid-template-columns: repeat(2, 1fr);
-          justify-self: flex-start;
-        }
+      & h2 {
+        text-align: initial;
       }
-    }
 
-    & article:nth-of-type(2) {
-      & > div:last-child {
-        & > div {
-          & > span {
-            margin-top: 0.4rem;
-          }
+      & > div {
+        & > div:nth-of-type(2) {
+          justify-self: flex-start;
         }
       }
     }
@@ -107,9 +138,15 @@
     & article:nth-of-type(2) {
       & > div:last-child {
         & > div {
-          gap: 2rem;
-          grid-template-columns: 10rem auto;
-          justify-self: flex-start;
+          grid-template-columns: 1fr;
+          & > div {
+            gap: 2rem;
+            grid-template-columns: 10rem auto;
+            justify-self: flex-start;
+            & > span {
+              margin-top: 0.3rem;
+            }
+          }
         }
       }
     }
