refactor: adjust footer font size

--- a/styles/footer.css
+++ b/styles/footer.css
@@ -12,8 +12,14 @@ footer {
     }
   }
 
-  & p {
-    font-size: var(--fs-xs);
+  & > div {
+    & > div {
+      font-size: var(--fs-base);
+
+      & > p {
+        font-size: var(--fs-xs);
+      }
+    }
   }
 
   & > div,
