--- a/styles/index.css
+++ b/styles/index.css
@@ -4,4 +4,5 @@
 @import url("hero.css");
 @import url("cases.css");
 @import url("about.css");
+@import url("photos.css");
 @import url("footer.css");
