--- a/styles/about.css
+++ b/styles/about.css
@@ -2,6 +2,10 @@
   display: grid;
   gap: 7rem;
 
+  h3 {
+    display: none;
+  }
+
   & article {
     display: grid;
     gap: 3rem;
@@ -33,7 +37,7 @@
         display: grid;
         gap: 1.5rem;
 
-        & span {
+        & div {
           align-items: center;
           border: 2px solid var(--brand-secondary-500);
           border-radius: 1rem;
@@ -90,7 +94,7 @@
         & > div:nth-of-type(1) {
           grid-template-columns: repeat(3, 1fr);
 
-          & span {
+          & div {
             grid-template-columns: 1fr;
             text-align: center;
           }
