--- a/assets/styles/footer.css
+++ b/assets/styles/footer.css
@@ -1,5 +1,5 @@
 footer {
-  border-top: 0.06rem solid var(--brand-secondary-500);
+  border-top: 0.15em solid var(--brand-secondary-500);
   display: grid;
   gap: 2rem;
   padding-block: 3rem;
@@ -8,7 +8,7 @@ footer {
     width: 2.1rem;
 
     & path {
-      fill: var(--brand-secondary-500);
+      fill: var(--brand-secondary-100);
     }
   }
 
