refactor: complete homepage

--- a/assets/styles/global.css
+++ b/assets/styles/global.css
@@ -100,7 +100,7 @@ main {
   width: min(76rem, 100% - 2 * var(--wrapper-margin));
 
   & img {
-    border-radius: 50%;
+    border-radius: 1rem;
     width: 100%;
   }
 }
